--- a/disaster_relief/template/login.html
+++ b/disaster_relief/template/login.html
@@ -132,9 +132,9 @@
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-uppercase mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="contact_us">Contact Us</a>
+                    <a class="btn btn-link" href="our_services">Our Services</a>
+                    <a class="btn btn-link" href="terms_conditions">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
