--- a/disaster_relief/template/report.html
+++ b/disaster_relief/template/report.html
@@ -161,7 +161,7 @@
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="contact_us">Contact Us</a>
                     <a class="btn btn-link" href="our_services">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="terms_conditions">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div>
             </div>
