--- a/disaster_relief/template/about.html
+++ b/disaster_relief/template/about.html
@@ -77,7 +77,7 @@
             <h1 class="display-3 text-white text-uppercase mb-3 animated slideInDown">About</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index">INDEX</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">About</li>
                 </ol>
