--- a/disaster_relief/template/report.html
+++ b/disaster_relief/template/report.html
@@ -94,8 +94,7 @@
                 <div class="col-lg-12 wow fadeIn" data-wow-delay="0.1s">
                     <div class="bg-secondary p-5">
                         <p class="d-inline-block bg-dark text-primary py-1 px-4">Contact Us</p>
-                        <h1 class="text-uppercase mb-4">Have Any Query? Please Contact Us!</h1>
-                        <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                        <h1 class="text-uppercase mb-4">Contact Us!</h1>
                         <form action="add_disaster_details" method="POST">
                             {% csrf_token %}
                             <div class="mb-3">
