--- a/disaster_relief/template/about.html
+++ b/disaster_relief/template/about.html
@@ -59,7 +59,7 @@
                     <div class="dropdown-menu m-0">
                         <a href="notifications" class="dropdown-item">Notifications</a>
                         <a href="admin_dashboard" class="dropdown-item">Trash page</a>
-                        <a href="logistics" class="dropdown-item">Testimonial</a>
+                        <a href="logistics" class="dropdown-item">Logistics</a>
                         <a href="pagenotfound" class="dropdown-item">Error page</a>
                     </div>
                 </div>
