--- a/disaster_relief/template/contact_us.html
+++ b/disaster_relief/template/contact_us.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-uppercase mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="about">About Us</a>
                     <a class="btn btn-link" href="contact_us">Contact Us</a>
                     <a class="btn btn-link" href="our_services">Our Services</a>
                     <a class="btn btn-link" href="terms_conditions">Terms & Condition</a>
