--- a/disaster_relief/template/index.html
+++ b/disaster_relief/template/index.html
@@ -71,10 +71,11 @@
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
+        <div id="header-carousel" class="carousel slide"> <!-- Removed data-bs-ride="carousel" to stop auto-cycling -->
             <div class="carousel-inner">
+                <!-- Only one carousel item remains -->
                 <div class="carousel-item active">
-                    <img class="w-100" src='{% static "https://files.catbox.moe/eu71to.jpg" %}' alt="Image">
+                    <img class="w-100" src="https://files.catbox.moe/eu71to.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
                         <div class="mx-sm-5 px-5" style="max-width: 900px;">
                             <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Providing Relief in Times of Crisis</h1>
@@ -83,27 +84,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img class="w-100" src="https://files.catbox.moe/eu71to.jpg" alt="Image">
-                    <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
-                        <div class="mx-sm-5 px-5" style="max-width: 900px;">
-                            <h1 class="display-2 text-white text-uppercase mb-4 animated slideInDown">Supporting Communities in Need</h1>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-map-marker-alt text-primary me-3"></i>VARIKOLI, PUTHENCRUZ, KERALA</h4>
-                            <h4 class="text-white text-uppercase mb-4 animated slideInDown"><i class="fa fa-phone-alt text-primary me-3"></i>+91 9746209497</h4>
-                        </div>
-                    </div>
-                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#header-carousel"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <!-- Removed the navigation buttons (previous/next) -->
         </div>
     </div>
     <!-- Carousel End -->
@@ -285,5 +267,4 @@
     <!-- Template Javascript -->
     <script src='{% static "js/main.js" %}'></script>
 </body>
-
 </html>
