--- a/disaster_relief/template/admin_dashboard.html
+++ b/disaster_relief/template/admin_dashboard.html
@@ -63,7 +63,7 @@
             <div class="row g-0">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="h-100">
-                        <img class="img-fluid h-100" src="img/open.jpg" alt="">
+                        <img class="img-fluid h-100" src='{% static "img/open.jpg"%}' alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -176,13 +176,13 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src='{% static "lib/wow/wow.min.js"%}'></script>
+    <script src='{% static "lib/easing/easing.min.js"%}'></script>
+    <script src='{% static "lib/waypoints/waypoints.min.js"%}'></script>
+    <script src='{% static "lib/owlcarousel/owl.carousel.min.js"%}'></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src='{% static "js/main.js"%}'></script>
 </body>
 
 </html>
